// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly with showBackButton set to false 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 42,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 1000,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "black",
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "600",
          "letterSpacing": -0.41,
        },
        Object {
          "left": 40,
          "position": "absolute",
          "right": 40,
          "textAlign": "center",
          "top": 36,
        },
      ]
    }
  />
</View>
`;

exports[`Header renders correctly with showBackButton set to true 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 42,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 1000,
    }
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "left": 10,
        "opacity": 1,
        "position": "absolute",
        "top": 36,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#000000",
              "fontSize": 20,
              "paddingLeft": 10,
              "paddingRight": 10,
            },
            undefined,
          ],
          Object {
            "fontFamily": "Entypo",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }
    >
      
    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "black",
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "600",
          "letterSpacing": -0.41,
        },
        Object {
          "left": 40,
          "position": "absolute",
          "right": 40,
          "textAlign": "center",
          "top": 36,
        },
      ]
    }
  />
</View>
`;
